# vasp-analyzer

./: README.md  how-to.ipynb  pyproject.toml
src/vasp-analyzer/: __init__.py  vasp.py
src/vasp-analyzer/data/: incar.py  kpoints.py  xml.py
src/vasp_analyzer/: __init__.py  data_handler.py  plot_handler.py  vasp.py
src/vasp_analyzer/data/: dos.py  incar.py  kpoints.py
src/vasp_analyzer/graph/: plotter.py
vasp-analyzer/: __init__.py
vasp-analyzer/data/: dos.py
